# visage

./: .clangd  CMakeLists.txt  build.bat
cmake/: compile_flags.cmake  testing_framework.cmake  visageConfig.cmake.in
examples/: CMakeLists.txt
visage_app/: application_editor.h  application_window.h  client_window_decoration.h  window_event_handler.h
visage_graphics/: CMakeLists.txt  canvas.h  color.h  emoji.h  font.h  gradient.h  graphics_caches.h  graphics_utils.h  image.h  layer.cpp  layer.h  palette.h  path.cpp  path.h  post_effects.h  region.cpp  region.h  renderer.h  screenshot.h  shader.h  shape_batcher.h  shapes.h  svg.h  text.h  theme.h  windowless_context.h
visage_ui/: events.h  frame.cpp  frame.h  layout.h  popup_menu.h  scroll_bar.h  svg_frame.h  undo_history.h
visage_utils/: child_process.h  defines.h  file_system.h  space.h  string_utils.h  thread_utils.h  time_utils.h
visage_widgets/: bar_list.h  button.h  color_picker.h  graph_line.h  heat_map.h  palette_editor.h  shader_editor.h  shader_quad.h  text_editor.h
visage_windowing/: CMakeLists.txt  windowing.h
visage_windowing/emscripten/: windowing_emscripten.h
visage_windowing/linux/: windowing_x11.h
visage_windowing/macos/: windowing_macos.h
visage_windowing/win32/: windowing_win32.h
